# pdftextorizer

./: AUTHORS  ChangeLog  Doxyfile  Makefile  NEWS.md  README.md  pyproject.toml  setup.cfg
src/: mainwindow.py  multi_column.py  pdffile.py  pdftextorizer.py  regions_schema.py  util.py  version.py
